Fixed navbar icon being too big

--- a/mkdocs_custommill/css/base.scss
+++ b/mkdocs_custommill/css/base.scss
@@ -97,6 +97,9 @@
 		span.version-badge {
 			cursor: default;
 		}
+		img {
+			height: 40px;
+		}
 	}
 	.cm-navbar-group {
 		@include flexbox;
